# ai_agents_leader

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPEN_SOURCE.md  PRIVACY.md  README.md  SECURITY.md  VERSION.md  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/overlay/: index.html  package.json  tailwind.config.ts  vite.config.ts
apps/overlay/src/: App.tsx  index.css
apps/overlay/src-tauri/: Cargo.toml  tauri.conf.json
apps/overlay/src-tauri/capabilities/: default.json
apps/overlay/src-tauri/icons/: icon.icns
apps/overlay/src-tauri/src/: commands.rs  lib.rs  main.rs  window.rs
apps/overlay/src/hooks/: useWebSocket.ts
apps/overlay/src/stores/: agentStore.ts
docs/: ai-dev.md  design.md  development.md  dir.md  usage.md
scripts/: build-release-assets.mjs  clean-node-modules.mjs
