[package]
name = "ai-agents-leader-overlay"
version = "0.1.0"
edition = "2021"

[lib]
name = "overlay_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tokio = { version = "1", features = ["io-util", "net", "time"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
